# energy-efficient-computing

./: README.md
hands-on/: CMakeLists.txt  README.md  install_examples.sh
hands-on/DVFS/: README.md  dvfs_sbatch_example_1.sh  dvfs_sbatch_example_2.sh
hands-on/EAR/: README.md  ear_sbatch_GROMACS.sh
hands-on/KT/: README.md  common.py  tuning_gemm.py  tuning_gemm_cached.py  tuning_hotspot.py
hands-on/KT/gemm/: common.opencl  xgemm_part1.opencl  xgemm_part2.opencl  xgemm_part3.opencl
hands-on/KT/hotspot/: hotspot.cu
hands-on/dvfs/: dvfs_sbatch_example_2.sh
hands-on/monitoring/: README.md  energy_monitoring_pmtstudy.sh
hands-on/scripts/: plot_dvfs_example_2.py
hands-on/src/: CMakeLists.txt  axpy.c  axpy.cu  axpy_pmt.cpp  axpy_pmt.cu  daxpy.c  helper.h  mat_mul.py  mat_mul_pmt.cpp  xgemm.c  xgemm.cu  xgemm.hip  xgemm_pmt.cpp  xgemm_pmt.cu
scripts/: mods.sh  plot_dvfs_ear.py  plot_eacct.py  plot_monitoring_pmtstudy.py  roofline_eacct.py
slides/: Energy_TUE_APR_2024_opt.pptx
tutorials/: README.md
tutorials/dvfs/: README.md  dvfs_NPB_example_1.sh  dvfs_NPB_example_2.sh
tutorials/monitoring/: README.md
tutorials/monitoring_ear/: GROMACS_CPU_job.sh  GROMACS_GPU_job.sh  GROMACS_SINGULARITY_GPU.sh  GROMACS_job.sh  HemePure_CPU_job.sh  HemePure_GPU_job.sh  NPB_job.sh  Palabos_job.sh  PyTorch_job.sh  README.md  hemepure_cpu_job.sh  hemepure_gpu_job.sh  monitoring_example_1.sh  monitoring_example_2.sh
tutorials/monitoring_general/: CMakeLists.txt  README.md  energy_monitoring_ear.sh
tutorials/monitoring_general/src/: CMakeLists.txt
tutorials/policies/: GROMACS_job.sh  NPB_job.sh  README.md
tutorials/scripts/: plot_AMD_csv.py  plot_dvfs_example_2.py
